dev.out

> pivot-table-c@0.1.0 dev
> BABEL_OUTPUT=esm babel src --extensions ".ts,.tsx,.js,.jsx" --watch --copy-files --out-dir esm

Browserslist: caniuse-lite is outdated. Please run:
  npx browserslist@latest --update-db
  Why you should do it regularly: https://github.com/browserslist/browserslist#browsers-data-updating
Successfully compiled 18 files with Babel (2070ms).
Successfully compiled 1 file with Babel (199ms).
Successfully compiled 1 file with Babel (147ms).
Successfully compiled 1 file with Babel (141ms).
Successfully compiled 1 file with Babel (134ms).
Successfully compiled 1 file with Babel (126ms).
Successfully compiled 1 file with Babel (129ms).
SyntaxError: /opt/superset_roma/ptc/src/plugin/Components/Rows.jsx: Expected corresponding JSX closing tag for <>. (210:20)

  208 |                     >
  209 |                       {/* тут число */}
> 210 |                     </td> : (el === '') ? null : '\u00A0'
      |                     ^
  211 |                   )
  212 |                 } else {
  213 |                   if (el === rowsMatrix[i-1][j]) {
    at Parser._raise (/opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:569:17)
    at Parser.raiseWithData (/opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:562:17)
    at Parser.raise (/opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:523:17)
    at Parser.jsxParseElementAt (/opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:7473:14)
    at Parser.jsxParseElement (/opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:7504:17)
    at Parser.parseExprAtom (/opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:7518:19)
    at Parser.parseExprSubscripts (/opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:11658:23)
    at Parser.parseUpdate (/opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:11638:21)
    at Parser.parseMaybeUnary (/opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:11613:23)
    at Parser.parseMaybeUnary (/opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:9973:20) {
  loc: Position { line: 210, column: 20 },
  pos: 6331,
  code: 'BABEL_PARSE_ERROR',
  reasonCode: 'MissingClosingTagFragment'
}
Successfully compiled 1 file with Babel (112ms).
SyntaxError: /opt/superset_roma/ptc/src/plugin/Components/Rows.jsx: Expected corresponding JSX closing tag for <>. (210:20)

  208 |                     >
  209 |                       {/* тут число */}
> 210 |                     </td> : (el === '') ? null : '\u00A0'
      |                     ^
  211 |                   )
  212 |                 } else {
  213 |                   if (el === rowsMatrix[i-1][j]) {
    at Parser._raise (/opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:569:17)
    at Parser.raiseWithData (/opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:562:17)
    at Parser.raise (/opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:523:17)
    at Parser.jsxParseElementAt (/opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:7473:14)
    at Parser.jsxParseElement (/opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:7504:17)
    at Parser.parseExprAtom (/opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:7518:19)
    at Parser.parseExprSubscripts (/opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:11658:23)
    at Parser.parseUpdate (/opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:11638:21)
    at Parser.parseMaybeUnary (/opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:11613:23)
    at Parser.parseMaybeUnary (/opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:9973:20) {
  loc: Position { line: 210, column: 20 },
  pos: 6364,
  code: 'BABEL_PARSE_ERROR',
  reasonCode: 'MissingClosingTagFragment'
}
Successfully compiled 1 file with Babel (108ms).
Successfully compiled 1 file with Babel (127ms).
Successfully compiled 1 file with Babel (125ms).
Successfully compiled 1 file with Babel (146ms).
Successfully compiled 1 file with Babel (175ms).
Successfully compiled 1 file with Babel (179ms).
Successfully compiled 1 file with Babel (188ms).
Successfully compiled 1 file with Babel (166ms).
Successfully compiled 1 file with Babel (127ms).
Successfully compiled 1 file with Babel (164ms).
Successfully compiled 1 file with Babel (155ms).
Successfully compiled 1 file with Babel (154ms).
Successfully compiled 1 file with Babel (278ms).
Successfully compiled 1 file with Babel (162ms).
Successfully compiled 1 file with Babel (121ms).
Successfully compiled 1 file with Babel (169ms).
Successfully compiled 1 file with Babel (162ms).
Successfully compiled 1 file with Babel (159ms).
Successfully compiled 1 file with Babel (157ms).
Successfully compiled 1 file with Babel (159ms).
Successfully compiled 1 file with Babel (170ms).
Successfully compiled 1 file with Babel (190ms).
Successfully compiled 1 file with Babel (149ms).
Successfully compiled 1 file with Babel (151ms).
Successfully compiled 1 file with Babel (156ms).
Successfully compiled 1 file with Babel (164ms).
Successfully compiled 1 file with Babel (112ms).
Successfully compiled 1 file with Babel (127ms).
Successfully compiled 1 file with Babel (123ms).
Successfully compiled 1 file with Babel (110ms).
Successfully compiled 1 file with Babel (104ms).
Successfully compiled 1 file with Babel (124ms).
Successfully compiled 1 file with Babel (128ms).
Successfully compiled 1 file with Babel (122ms).
